--- a/ex1.12/Dockerfile
+++ b/ex1.12/Dockerfile
@@ -4,6 +4,9 @@ WORKDIR /usr/src/app/
 
 COPY . .
 
+# this is added in ex1.14
+ENV REACT_APP_BACKEND_URL=http://localhost:8080
+
 RUN npm install
 
 RUN npm run build
