revisited+simplified ex1.12+ related files

--- a/ex1.13/Dockerfile
+++ b/ex1.13/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.16
 
 WORKDIR /usr/src/app/
 
-COPY . .
+COPY example-backend .
 
 # this is added in ex1.14
 ENV REQUEST_ORIGIN=http://localhost:5000
@@ -11,6 +11,10 @@ RUN go build
 
 # running tests
 RUN go test ./...
+
+# added in ex3.5
+# RUN useradd matti
+# USER matti
 
 CMD ["./server"]
 
