--- a/ex2.8.nginx.conf
+++ b/ex2.8.nginx.conf
@@ -12,7 +12,7 @@ http {
     # are forwarded
     location /api/ {
       proxy_set_header Host $host;
-      proxy_pass http://backend:8080;
+      proxy_pass http://backend:8080/;
     }
   }
 }
