--- a/ex2.8.yml
+++ b/ex2.8.yml
@@ -25,3 +25,10 @@ services:
       - POSTGRES_PASSWORD=postgres
     volumes:
       - ./database:/var/lib/postgresql/data
+
+  nginx:
+    image: nginx:1.25-alpine
+    ports:
+      - 127.0.0.1:80:80
+    volumes:
+      - ./ex2.8.nginx.conf:/etc/nginx/nginx.conf:ro
