--- a/ex2.9.yml
+++ b/ex2.9.yml
@@ -1,51 +1,21 @@
-# since Dockerfiles are not involved in docker compose, we'll skip them
-
-version: '3.8'
+version: "3.8"
 
 services:
   frontend:
-    image: node:16
+    build: ex1.12
     ports:
-      - 5000:5000
+      - 127.0.0.1:5000:5000
     environment:
-      - REACT_APP_BACKEND_URL=http://localhost:8080
-    command: |
-      sh -c "
-      npm install;
-      npm run build;
-      npm install -g serve;
-      serve -s -l 5000 build
-      "
-    working_dir: /usr/src/app/
-    volumes:
-      - ./example-frontend:/usr/src/app/
-    depends_on:
-      - backend
-    container_name: frontend
+      - REACT_APP_BACKEND_URL=http://localhost/api
 
   backend:
-    image: golang:1.16
+    build: ex1.13
     ports:
-      - 8080:8080
+      - 127.0.0.1:8080:8080
     environment:
-      - REQUEST_ORIGIN=http://localhost
       - REDIS_HOST=redis
-      - POSTGRES_HOST=db
-    command: |
-      sh -c "
-        go build;
-
-        # running tests
-        go test ./...;
-        ./server
-      "
-    working_dir: /usr/src/app/
-    volumes:
-      - ./example-backend:/usr/src/app/
-    depends_on:
-      - redis
-      - postgres
-    container_name: backend
+      - POSTGRES_HOST=postgres
+      - REQUEST_ORIGIN=http://localhost
 
   redis:
     image: redis
@@ -53,17 +23,15 @@ services:
 
   postgres:
     image: postgres:16.2-alpine
-    container_name: db
+    container_name: postgres
     environment:
       - POSTGRES_PASSWORD=postgres
     volumes:
-    - ./ex2.7+gp_data:/var/lib/postgresql/data
+      - ./database:/var/lib/postgresql/data
 
   nginx:
     image: nginx:1.25-alpine
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
-      - 80:80
-    depends_on:
-      - frontend
+      - 127.0.0.1:80:80
+    volumes:
+      - ./ex2.8.nginx.conf:/etc/nginx/nginx.conf:ro
