--- a/ex2.10.yml
+++ b/ex2.10.yml
@@ -3,16 +3,15 @@ version: "3.8"
 services:
   frontend:
     build: ex1.12
-    ports:
-      - 127.0.0.1:5000:5000
+    environment:
+      - REACT_APP_BACKEND_URL=http://localhost/api
 
   backend:
     build: ex1.13
-    ports:
-      - 127.0.0.1:8080:8080
     environment:
       - REDIS_HOST=redis
       - POSTGRES_HOST=postgres
+      - REQUEST_ORIGIN=http://localhost
 
   redis:
     image: redis
@@ -25,3 +24,10 @@ services:
       - POSTGRES_PASSWORD=postgres
     volumes:
       - ./database:/var/lib/postgresql/data
+
+  nginx:
+    image: nginx:1.25-alpine
+    ports:
+      - 127.0.0.1:80:80
+    volumes:
+      - ./ex2.8.nginx.conf:/etc/nginx/nginx.conf:ro
