--- a/ex2.6.yml
+++ b/ex2.6.yml
@@ -12,7 +12,7 @@ services:
       - 127.0.0.1:8080:8080
     environment:
       - REDIS_HOST=redis
-      - POSTGRES_HOST=postgres
+      - POSTGRES_HOST=db
 
   redis:
     image: redis
@@ -20,8 +20,6 @@ services:
 
   postgres:
     image: postgres:16.2-alpine
-    container_name: postgres
+    container_name: db
     environment:
       - POSTGRES_PASSWORD=postgres
-    volumes:
-      - ./database:/var/lib/postgresql/data
