ex2.10 re-revisited

--- a/ex1.13/Dockerfile
+++ b/ex1.13/Dockerfile
@@ -2,7 +2,12 @@ FROM golang:1.16
 
 WORKDIR /usr/src/app/
 
-COPY example-backend .
+
+RUN \
+    git clone https://github.com/docker-hy/material-applications tmp_repo &&\
+    git -C tmp_repo checkout f5d98f5060305d5369c90f11277d7edb2af88d63 &&\
+    mv tmp_repo/example-backend/* . &&\
+    rm -rf tmp_repo
 
 # this is added in ex1.14
 ENV REQUEST_ORIGIN=http://localhost:5000
