--- a/ex1.12/Dockerfile
+++ b/ex1.12/Dockerfile
@@ -2,12 +2,18 @@ FROM node:16
 
 WORKDIR /usr/src/app/
 
-COPY example-frontend .
+RUN \
+    git clone https://github.com/docker-hy/material-applications tmp_repo &&\
+    git -C tmp_repo checkout f5d98f5060305d5369c90f11277d7edb2af88d63 &&\
+    mv tmp_repo/example-frontend/* . &&\
+    rm -rf tmp_repo
 
-# this is added in ex1.14
-ENV REACT_APP_BACKEND_URL=http://localhost:8080
+ARG BACKEND_URL
 
 RUN npm install
+
+# this is added in ex1.14, modded in ex2.10
+ENV REACT_APP_BACKEND_URL=${BACKEND_URL:-http://localhost:8080}
 
 RUN npm run build
 
