ex3.6 made `ope` -friendly

--- a/ex3.6/nginx.conf
+++ b/ex3.6/nginx.conf
@@ -5,7 +5,7 @@ http {
     listen 80;
 
     location / {
-      proxy_pass http://frontend;
+      proxy_pass http://frontend:5000;
     }
 
     # configure here where requests to http://localhost/api/...
