--- a/ex3.7/docker-compose.yml
+++ b/ex3.7/docker-compose.yml
@@ -3,13 +3,11 @@ version: "3.8"
 services:
   frontend:
     build:
-      dockerfile: ./ex3.6-frontend.Dockerfile
-      args:
-        - BACKEND_URL=http://localhost/api
+      dockerfile: frontend.Dockerfile
 
   backend:
     build:
-      dockerfile: ./ex3.6-backend.Dockerfile
+      dockerfile: backend.Dockerfile
     environment:
       - REDIS_HOST=redis
       - POSTGRES_HOST=postgres
@@ -32,4 +30,4 @@ services:
     ports:
       - 127.0.0.1:80:80
     volumes:
-      - ./ex3.6.nginx.conf:/etc/nginx/nginx.conf:ro
+      - ../ex3.6/nginx.conf:/etc/nginx/nginx.conf:ro
